--- a/index.html
+++ b/index.html
@@ -12,20 +12,30 @@
     <script src="js/editBookmark.js" defer></script>
 </head>
 
-<body style="background-image: url(media/Wallpaper.jpg);">
+<body>
+    <div style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh; background-image: url(media/Wallpaper.jpg); filter: brightness(0.5); z-index: -100;"></div>
+
     <header>
         <h1 class="m-5" style="color:white; font-weight: 700; text-shadow: 0 0 6px rgba(0, 0, 0, 0.25);">
             Mis Marcadores
         </h1>
     </header>
-    
+
+    <!-- Barra de búsqueda usando Flexbox para centrar y botón abajo -->
+    <div class="d-flex justify-content-center align-items-center">
+        <form action="https://www.google.com/search" method="get" class="d-flex flex-column w-50 m-auto mt-5">
+            <input type="text" name="q" class="form-control p-3 mb-3" placeholder="Buscar en Google">
+            <button type="submit" class="btn btn-primary w-auto mx-auto" style="font-weight: 700; font-size: 24px;">Buscar</button>
+        </form>
+    </div>
+
     <!-- Contenedor de marcadores -->
-    <div class="d-flex justify-content-center align-items-center w-50" style="margin-top: 15vh;">
+    <div class="d-flex justify-content-center align-items-center w-75 m-auto" style="margin-top: 15vh !important;">
         <div class="d-grid gap-3 text-center" id="app-container" style="grid-template-columns: repeat(6, 1fr)"></div>
     </div>
 
     <!-- Botones de acciones -->
-    <div class="m-3" style="position:absolute; bottom: 0; right: 0;">
+    <div class="m-3" style="position:fixed; bottom: 20px; right: 20px;">
         <button class="btn btn-secondary" id="edit-bookmark">
             🖊️ Editar Marcador
         </button>
